--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script href="/js/script.js" defer></script>
+    <script src="/js/script.js" defer></script>
 </head>
 <body>
     <div class="header">
@@ -15,6 +15,7 @@
     <div class="container">
         <div class="calc-base">
             <div class="screen">
+                <div class="output"></div>
             </div>
             <div class="buttons">
                 <div class="main">
